--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+*, 
+*::before,
+*::after{
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+li{
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
